--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 10vh;
-    background-color: #1b4353;
+    background-color: #05204a;
     color: #ffffff;
     display: flex;
     align-items: center;
